# PyReigns

./: .gitignore  README.md  pyproject.toml  pyreigns.py
scripts/: PyReigns.spec  build.bat  build.zsh  clean.bat  clean.zsh
src/pyreignslib/: card.py  main_menu.py  prototype_mode.py  utilities.py
src/pyreignslib/core/: __init__.py  context.py  game.py  mode.py
